--- a/.github/workflows/appServiceSlot_Working_DO_NOT_MERGE_eusslotdemoapp.yml
+++ b/.github/workflows/appServiceSlot_Working_DO_NOT_MERGE_eusslotdemoapp.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build .\appServiceSlot\SlotDemo.sln --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish .\appServiceSlot\SlotDemo.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
